--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -6528,6 +6528,9 @@ body {
               .figure {
                 padding-left: 16px;
                 padding-right: 16px;
+                p {
+                  font-size: 15px;
+                }
               }
             }
             &.mobile {
