complete updating hosting page contact and question list section for UI

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3204,7 +3204,7 @@ body {
 }
 
 .page .main .hosting-page .hosting-section.feature {
-  padding: 100px 0px 100px 0px;
+  padding: 100px 0px;
   background: linear-gradient(to bottom, #09133a 0%, #070e28 100%);
   text-align: center;
 }
@@ -3231,20 +3231,401 @@ body {
   height: 100%;
 }
 
-.page .main .hosting-page .hosting-section.servers {
+.page .main .hosting-page .hosting-section.contact {
   text-align: center;
 }
 
-.page .main .hosting-page .hosting-section.servers .ui.grid {
-  justify-content: center;
-}
-
-.page .main .hosting-page .hosting-section.servers .ui.grid .computer.column {
-  width: 33.33%;
-}
-
-.page .main .hosting-page .hosting-section.servers h2 {
+.page .main .hosting-page .hosting-section.contact h2 {
   color: #fff;
+}
+
+.page .main .hosting-page .hosting-section.contact h5 {
+  color: #9da6c7;
+  font-size: 15px;
+  font-family: "Gotham Book";
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form {
+  padding: 20px;
+  border-radius: 5px;
+  margin: 25px 0;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .d-flex {
+  display: flex;
+  justify-content: space-around;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .d-flex.one .form-group:first-child {
+  margin-right: 0;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .d-flex .form-group {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  flex: 1;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .d-flex .form-group.phone {
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .d-flex .form-group.phone label {
+  text-align: left;
+  padding-bottom: 13px;
+  margin: 0;
+  font-family: "Gotham Bold";
+  color: #656c8b !important;
+  background: transparent;
+}
+
+@media (min-width: 320px) {
+  .page .main .hosting-page .hosting-section.contact .message-form .d-flex .form-group.phone label {
+    font-size: 14px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .page .main .hosting-page .hosting-section.contact .message-form .d-flex .form-group.phone label {
+    font-size: 16px;
+  }
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .d-flex .form-group.phone input {
+  padding-left: 60px;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .d-flex .form-group.phone .custom-error {
+  bottom: 20px;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .d-flex .form-group:first-child {
+  margin-right: 15px;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .d-flex .form-group .ui.header {
+  margin: 0;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .d-flex .form-group .field {
+  flex: 1;
+  margin-bottom: 25px;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .d-flex .form-group .phone-form {
+  text-align: left;
+  margin-bottom: 10px;
+  margin-left: 20px;
+  margin-right: 0px;
+  flex: 1;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .d-flex .form-group .phone-form svg {
+  color: #8341ff;
+  width: 20px;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .d-flex .form-group .phone-form .react-phone-number-input.success .react-phone-number-input__phone {
+  border-color: #94d544 !important;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .d-flex .form-group .phone-form .react-phone-number-input__phone {
+  background: #050a20 !important;
+  border: 2px solid #202c5a;
+  padding: 12px;
+  color: #fff !important;
+  margin-top: 10px;
+  font-size: 16px;
+  font-family: "Gotham Bold";
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .d-flex .form-group .phone-form .react-phone-number-input__phone:hover {
+  border-color: #465489 !important;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .d-flex .form-group .phone-form .react-phone-number-input__phone:focus,
+.page .main .hosting-page .hosting-section.contact .message-form .d-flex .form-group .phone-form .react-phone-number-input__phone:active {
+  border-color: #8341ff !important;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .d-flex .form-group .phone-form input:focus::-webkit-input-placeholder {
+  color: #fff;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .d-flex .form-group .phone-form .react-phone-number-input__error {
+  font-family: "Gotham Bold";
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .d-flex .form-group .phone-form .react-phone-number-input__input--invalid {
+  border-color: #e71f1f;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .d-flex .form-group .phone-form .react-phone-number-input__country-select-arrow {
+  margin-left: 1.3em;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .d-flex .form-group .custom-error {
+  position: absolute;
+  bottom: 5px;
+  padding: 0;
+  font-family: "Gotham Bold";
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form label,
+.page .main .hosting-page .hosting-section.contact .message-form span {
+  color: #656c8b !important;
+  font-family: "Gotham Bold";
+  font-size: 16px;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .field.error label:after {
+  content: "*";
+  color: #e71f1f;
+  padding-left: 3px;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .field.error input,
+.page .main .hosting-page .hosting-section.contact .message-form .field.error textarea,
+.page .main .hosting-page .hosting-section.contact .message-form .field.error .ui.dropdown {
+  border-color: #a71f1f !important;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .field.error .ui.dropdown .text {
+  background: transparent;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .field label {
+  text-align: left;
+  padding-bottom: 10px;
+  font-family: "Gotham Bold";
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .field input {
+  background: #050a20 !important;
+  border: 2px solid #202c5a;
+  padding: 12px;
+  font-size: 16px;
+  font-family: "Gotham Bold";
+  color: #fff;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .field input.success {
+  border-color: #94d544 !important;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .field input:hover {
+  border-color: #465489 !important;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .field input:focus,
+.page .main .hosting-page .hosting-section.contact .message-form .field input:active {
+  border-color: #8341ff !important;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .field input:focus::-webkit-input-placeholder {
+  color: #fff;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .field .selection {
+  background: #050a20 !important;
+  border: 2px solid #202c5a;
+  padding: 12px;
+  font-size: 15px;
+  font-family: "Gotham Bold";
+  color: #fff;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .field .selection.visible.dropdown .text:not(.default) {
+  color: #fff;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .field .selection.visible.dropdown .menu {
+  border: 2px solid #202c5a;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .field .selection.visible.dropdown .menu .item {
+  padding: 15px !important;
+  background: #050a20;
+  border: none;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .field .selection.visible.dropdown .menu .item.active,
+.page .main .hosting-page .hosting-section.contact .message-form .field .selection.visible.dropdown .menu .item:hover,
+.page .main .hosting-page .hosting-section.contact .message-form .field .selection.visible.dropdown .menu .item:focus {
+  background: #070a2c;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .field .selection.success {
+  border-color: #94d544 !important;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .field .selection:hover {
+  border-color: #465489 !important;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .field .selection:focus,
+.page .main .hosting-page .hosting-section.contact .message-form .field .selection:active {
+  border-color: #8341ff !important;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .field .ui.dropdown.selected,
+.page .main .hosting-page .hosting-section.contact .message-form .field .ui.dropdown .menu .selected.item {
+  background: #050a20;
+  color: rgba(0, 0, 0, 0.95);
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .field textarea {
+  background: #050a20 !important;
+  border: 2px solid #202c5a;
+  padding: 12px;
+  color: #fff;
+  font-size: 16px;
+  font-family: "Gotham Bold";
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .field textarea.success {
+  border-color: #94d544 !important;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .field textarea:hover {
+  border-color: #465489 !important;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .field textarea:focus,
+.page .main .hosting-page .hosting-section.contact .message-form .field textarea:active {
+  border-color: #8341ff !important;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .field textarea:focus::-webkit-input-placeholder {
+  color: #fff;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .privacy-section {
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .privacy-section.error .checkbox label:before {
+  border-color: red;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .privacy-section .checkbox:hover label:before {
+  border-color: #465489 !important;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .privacy-section .checkbox label {
+  padding-top: 5px;
+  padding-left: 40px;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .privacy-section .checkbox label:before {
+  background: #050a20 !important;
+  border: 2px solid #202c5a;
+  top: -3px;
+  width: 30px;
+  height: 30px;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .privacy-section .checkbox label:after {
+  background: #8341ff !important;
+  color: #fff;
+  font-size: 17px;
+  top: -3px;
+  width: 30px;
+  height: 30px;
+  padding-top: 5px;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .privacy-section .terms-section {
+  padding-left: 20px;
+  padding-top: 12px;
+  text-align: left;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .privacy-section .terms-section a {
+  color: #3e75db;
+  font-weight: bold;
+  font-family: "Gotham Bold";
+  font-size: 16px;
+  display: inline-block;
+}
+
+.page .main .hosting-page .hosting-section.contact .message-form .primary-button {
+  width: 50%;
+}
+
+.page .main .hosting-page .hosting-section.queue {
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+.page .main .hosting-page .hosting-section.queue h2 {
+  color: #fff;
+}
+
+.page .main .hosting-page .hosting-section.queue h5 {
+  color: #9da6c7;
+  font-size: 15px;
+  font-family: "Gotham Book";
+}
+
+.page .main .hosting-page .hosting-section.queue p {
+  color: #9da6c7;
+}
+
+.page .main .hosting-page .hosting-section.queue .item-group {
+  padding: 50px 0;
+}
+
+.page .main .hosting-page .hosting-section.queue .item-group .item.active {
+  background: #7839ee;
+  padding: 15px 0;
+}
+
+.page .main .hosting-page .hosting-section.queue .item-group .item.active .question-tag p {
+  color: #fff;
+}
+
+.page .main .hosting-page .hosting-section.queue .item-group .item.active .answer-tag {
+  max-height: 40px;
+}
+
+.page .main .hosting-page .hosting-section.queue .item-group .item .question-tag {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+}
+
+.page .main .hosting-page .hosting-section.queue .item-group .item .question-tag p {
+  margin: 0;
+  text-align: left;
+}
+
+.page .main .hosting-page .hosting-section.queue .item-group .item .question-tag button {
+  background: transparent;
+  color: #fff;
+  border: none;
+  font-size: 20px;
+  padding: 15px;
+  margin: 0;
+}
+
+.page .main .hosting-page .hosting-section.queue .item-group .item .answer-tag {
+  text-align: left;
+  transition: max-height 280ms cubic-bezier(0.4, 0, 0.2, 1);
+  max-height: 0;
+  overflow: hidden;
+  color: #f7f3fe;
+  padding-right: 50px;
+  font-family: "Gotham Book";
 }
 
 .page .main .hosting-page .hosting-section .alice-carousel {
@@ -5336,6 +5717,22 @@ body {
     padding: 40px 10px 20px 10px;
   }
 
+  .page .main .hosting-page .hosting-section.contact .message-form .d-flex {
+    flex-direction: column;
+  }
+
+  .page .main .hosting-page .hosting-section.contact .message-form .d-flex .form-group:first-child {
+    margin-right: 0px;
+  }
+
+  .page .main .hosting-page .hosting-section.contact .message-form .d-flex.one {
+    margin-top: 30px;
+  }
+
+  .page .main .hosting-page .hosting-section.contact .message-form .primary-button {
+    width: 100%;
+  }
+
   .page .main .wpservice-page .wpservice-header {
     min-height: 290px;
     height: 290px;
@@ -6092,6 +6489,30 @@ body {
     margin-right: auto !important;
     margin-left: auto !important;
     padding: 0 15px;
+  }
+
+  .page .main .hosting-page .hosting-section.contact .custom-col-6 .custom-col-8 {
+    width: 100% !important;
+  }
+
+  .page .main .hosting-page .hosting-section.contact .message-form .d-flex {
+    flex-direction: row;
+  }
+
+  .page .main .hosting-page .hosting-section.contact .message-form .d-flex .form-group:first-child {
+    margin-right: 15px;
+  }
+
+  .page .main .hosting-page .hosting-section.contact .message-form .d-flex.one {
+    margin-top: 0px;
+  }
+
+  .page .main .hosting-page .hosting-section.contact .message-form .primary-button {
+    width: 50%;
+  }
+
+  .page .main .hosting-page .hosting-section.queue .item-group .custom-col-6 .custom-col-8 {
+    width: 100% !important;
   }
 
   .page .main .wpservice-page .wpservice-header {
